# catch-rs

./: .gitignore  compile-release.sh  compile.sh  connect-dummies.sh  run-release.sh  run.sh
catch_client/: Cargo.toml
catch_client/src/: client.rs  components.rs  draw.rs  draw_map.rs  dummy.rs  entities.rs  game.rs  main.rs  particles.rs  player_input.rs  services.rs  sounds.rs  state.rs
catch_client/src/draw/: draw_draw_list.rs  draw_list.rs  mod.rs  post.rs
catch_client/src/systems/: .net_entity_system.rs.swp  draw_bouncy_enemy_system.rs  draw_item_system.rs  draw_player_system.rs  draw_projectile_system.rs  draw_wall_system.rs  interpolation_system.rs  mod.rs  net_entity_system.rs
catch_server/: Cargo.toml
catch_server/src/: .net.rs.swp  components.rs  entities.rs  main.rs  net.rs  services.rs  state.rs
catch_server/src/systems/: bouncy_enemy_system.rs  interaction_system.rs  interactions.rs  item_spawn_system.rs  mod.rs  movement_system.rs  net_entity_system.rs  player_controller_system.rs  player_item_system.rs  player_movement_system.rs  projectile_system.rs  rotate_system.rs  wall_interactions.rs
catch_shared/: Cargo.toml
catch_shared/src/: components.rs  entities.rs  event.rs  item.rs  lib.rs  map.rs  math.rs  movement.rs  net.rs  net_components.rs  player.rs  services.rs  tick.rs  tick_state.rs  util.rs
data/maps/: desert.tmx  lars.tmx  lars2.tmx  linemap.tmx  oneline.tmx  test.tmx
data/textures/: credits.txt
