[package]
name = "catch_client"
version = "0.1.0"
authors = [
    "leod <subtle.frustration@proton.me>"
]

[dependencies]
log = "*"
env_logger = "*"
piston = "*"
piston_window = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
gl = "*"
#ecs = "*"
time = "0.1.32"
getopts = "0.2.14"
rand = "0.3.11"
cpal = "*"
hprof = "*"
#rodio = "*"
rustc-serialize = "*"
bincode = "*"

[dependencies.rodio]
git = "https://github.com/tomaka/rodio.git"

[dependencies.ecs]
git = "https://github.com/HeroesGrave/ecs-rs.git"

[dependencies.color]
git = "https://github.com/bjz/color-rs.git"

[dependencies.catch_shared]
path = "../catch_shared"

[dependencies.renet]
path = "../../renet"

[dependencies.image]
version = "*"
features = ["png_codec"]
