[package]
name = "catch_client"
version = "0.1.0"
authors = [
    "Leonard Dahlmann <leo.dahlmann@gmail.com>"
]

[dependencies]
log = "*"
env_logger = "*"
time = "0.1.32"
glium = "0.12"
#glium_text = "*"
getopts = "0.2.14"
rand = "0.3.11"
hprof = "*"
rustc-serialize = "*"
bincode = "*"
nalgebra = "0.3"
clock_ticks = "*"
cpal = "*"
bitflags = "*"

[dependencies.glium_text]
git = "https://github.com/leod/glium_text.git"

[dependencies.rodio]
git = "https://github.com/tomaka/rodio.git"

[dependencies.ecs]
git = "https://github.com/HeroesGrave/ecs-rs.git"

[dependencies.color]
git = "https://github.com/bjz/color-rs.git"

[dependencies.catch_shared]
path = "../catch_shared"

[dependencies.renet]
git = "https://github.com/leod/renet.git"

[dependencies.image]
version = "*"
features = ["png_codec"]
