[package]
name = "catch_server"
version = "0.1.0"
authors = [
    "leod <subtle.frustration@proton.me>"
]

[dependencies]
#ecs = "*"
time = "0.1.32"
rand = "0.3.11"

[dependencies.ecs]
git = "https://github.com/HeroesGrave/ecs-rs.git"

[dependencies.catch_shared]
path = "../catch_shared"

[dependencies.renet]
path = "../../renet"

[dependencies.cereal]
path = "../../cereal"
