[package]
name = "catch_server"
version = "0.1.0"
authors = [
    "leod <subtle.frustration@proton.me>"
]

[dependencies]
#ecs = "*"
log = "*"
env_logger = "*"
time = "0.1.32"
rand = "0.3.11"
#hprof = "*"
rustc-serialize = "*"
bincode = "*"
nalgebra = "0.3"
libc = "*"
clock_ticks = "*"

[dependencies.hprof]
git = "https://github.com/cmr/hprof.git"

[dependencies.ecs]
git = "https://github.com/HeroesGrave/ecs-rs.git"

[dependencies.catch_shared]
path = "../catch_shared"

[dependencies.renet]
git = "https://github.com/leod/renet.git"
