[package]
name = "catch_shared"
version = "0.1.0"
authors = [
    "leod <subtle.frustration@proton.me>"
]

[dependencies]
#ecs = "*"
time = "0.1.32"
vecmath = "*"
#cereal = "0.2.2"
#cereal_macros = "0.2.1"

[dependencies.ecs]
git = "https://github.com/HeroesGrave/ecs-rs.git"

[dependencies.tiled]
path = "../../rs-tiled"

[dependencies.renet]
path = "../../renet"

[dependencies.cereal]
path = "../../cereal"

[dependencies.cereal_macros]
path = "../../cereal/plugin"
