[package]
name = "catch_shared"
version = "0.1.0"
authors = [
    "leod <subtle.frustration@proton.me>"
]

[dependencies]
log = "*"
#ecs = "*"
time = "0.1.32"
vecmath = "*"
bincode = "*"
rustc-serialize = "*"
nalgebra = "*"

[dependencies.ecs]
git = "https://github.com/HeroesGrave/ecs-rs.git"

[dependencies.tiled]
path = "../../rs-tiled"

[dependencies.renet]
path = "../../renet"
