[package]
name = "catch_shared"
version = "0.1.0"
authors = [
    "leod <subtle.frustration@proton.me>"
]

[dependencies]
log = "*"
#ecs = "*"
time = "0.1.32"
vecmath = "*"
bincode = "*"
rustc-serialize = "*"
nalgebra = "0.3"

[dependencies.ecs]
git = "https://github.com/HeroesGrave/ecs-rs.git"

[dependencies.tiled]
git = "https://github.com/leod/rs-tiled.git"

[dependencies.renet]
git = "https://github.com/leod/renet.git"
